2009-09-11  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Added first functions for getting the data
	  from an SQL database instead of from an XML database:
	  connect_to_mysql_db(), disconnect_from_sql_db(),
	  get_overview_from_sql_db(), and helper function
	  read_conf_file(). It is checked whether valid database access
	  data is in the file mysql.conf in the default configuration
	  directory, and if so, the MySQL database is used.
	  Added also a DESTROY() method for Foomatic::DB which closes the
	  connection to the SQL database if one was used.

2009-08-19  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-ppd-to-xml.in: Added "-n" option to the foomatic-ppd-to-xml
	  utility. This makes only new printer XML files being generated and
	  no modified versions of existing files.

2009-08-18  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-preferred-driver.in: The "hpijs" driver entry got replaced
	  by "hplip".

	* lib/Foomatic/DB.pm: Add "hpijs-pcl5e" or "hpijs-pcl5c" or "hplip"
	  instead of "hpijs" to the driver list of the XML file of a PCL 5c/e
	  printer if a printer XML file is generated from a PPD file.

	  Fixed ppd1284DeviceID() function, it did not recognize the
	  "CMD"/"COMMAND SET" field in the device ID string.

	  Made sure that the fields in the IEEE-1284 device ID get closed with
	  a semicolon before adding a new field.

	  If there is a <ppdentry> XML tag for the printer/driver combo, do not
	  use the <ppdentry> XML tags for the printer or the driver.

	  Add "*PSVersion:" keywords for the newest Ghostscript versions to the
	  PPD files.

2009-07-17  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Added support for multiple "*Product:" lines
	  in PPD files, improved determination of the model name from the
	  PPD file, put generation of the Foomatic ID from make and model
	  into the function generatepid().
	  
	* foomatic-ppd-to-xml.in: For determining whether there is already